2012-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use Rabbit's cast to bool instruction for zeroing h,
	  more efficient loading of pairs in shifts.
	* src/z80/peep.c:
	  Handle bool in instruction size calculations.

2012-05-28 Borut Razem <borut.razem AT gmail.com>

	* src/pic16/main.c: allow underscore characters in #pragma config

2012-05-26 Borut Razem <borut.razem AT gmail.com>

	* src/pic16/main.c: allow space characters in #pragma config

2012-05-25 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: corrected #pragma configure to #pragma config

2012-05-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/gen.c (genPointerSet): fixed warning

2012-05-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: fix my typo in r3ka path

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-r2k.def,
	  src/z80/peeph-z80.def,
	  src/z80/peeph-gbz80.def:
	  Jump optimization.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Non-destructive & with bit literal.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/peeph.def:
	  Improve elimination of branches.

2012-05-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: added r3ka and s08 to installer
	* support/sdbinutils/binutils/configure.in,
	* support/sdbinutils/binutils/configure: fix bug #3527589
	* src/SDCCcse.c (newCseDef): fix bug #3528899

2012-05-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Preparations for further pointer offset
	   optimizations

2012-05-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/peeph.def:
	  Allow disabling of tail-call and jump to return optimization.

2012-05-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Fixed inconsistent offsets for 16-bit register